--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/simsonmoses/dependency-package</url>
+        </repository>
+    </distributionManagement>
 </project>
