--- a/release.properties
+++ b/release.properties
@@ -1,15 +1,18 @@
 #release configuration
-#Sat Jun 01 16:56:52 IST 2024
+#Sat Jun 01 17:06:47 IST 2024
 scm.commentPrefix=[maven-release-plugin] 
 exec.pomFileName=pom.xml
 pushChanges=true
 releaseStrategyId=default
+project.dev.org.custom\:dependency-package=1.1-SNAPSHOT
 project.scm.org.custom\:dependency-package.connection=scm\:git\:git\://github.com/simsonmoses/dependency-package.git
-project.scm.org.custom\:dependency-package.tag=HEAD
+project.scm.org.custom\:dependency-package.tag=pre
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
+scm.tag=pre
 remoteTagging=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.org.custom\:dependency-package.url=https\://github.com/SimsonMoses/dependency-package
+project.rel.org.custom\:dependency-package=pre-release
 projectVersionPolicyId=default
 scm.url=scm\:git\:ssh\://github.com/SimsonMoses/dependency-package.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
@@ -20,4 +23,4 @@ exec.snapshotReleasePluginAllowed=false
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
 project.scm.org.custom\:dependency-package.developerConnection=scm\:git\:ssh\://github.com/SimsonMoses/dependency-package.git
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
-completedPhase=check-poms
+completedPhase=scm-commit-release
