--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.custom</groupId>
     <artifactId>dependency-package</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>0.0.4</version>
     <!-- Project information -->
     <name>dependency-package</name>
     <description>A simple example project for dependency</description>
