--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,12 @@
 #release configuration
-#Sat Jun 01 17:06:47 IST 2024
+#Sun Jun 02 21:06:35 IST 2024
 scm.commentPrefix=[maven-release-plugin] 
 exec.pomFileName=pom.xml
 pushChanges=true
 releaseStrategyId=default
 project.dev.org.custom\:dependency-package=1.1-SNAPSHOT
 project.scm.org.custom\:dependency-package.connection=scm\:git\:git\://github.com/simsonmoses/dependency-package.git
-project.scm.org.custom\:dependency-package.tag=pre
+project.scm.org.custom\:dependency-package.tag=pre-release
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
 scm.tag=pre
 remoteTagging=true
@@ -21,6 +21,6 @@ preparationGoals=clean verify
 scm.releaseCommitComment=@{prefix} prepare release @{releaseLabel}
 exec.snapshotReleasePluginAllowed=false
 scm.developmentCommitComment=@{prefix} prepare for next development iteration
-project.scm.org.custom\:dependency-package.developerConnection=scm\:git\:ssh\://github.com/SimsonMoses/dependency-package.git
+project.scm.org.custom\:dependency-package.developerConnection=scm\:git\:ssh\://github.com/simsonmoses/dependency-package.git
 scm.rollbackCommitComment=@{prefix} rollback the release of @{releaseLabel}
-completedPhase=scm-commit-release
+completedPhase=end-release
