--- a/release.properties
+++ b/release.properties
@@ -1,6 +1,6 @@
 #release configuration
 #Sun Jun 02 21:06:35 IST 2024
-scm.commentPrefix=[maven-release-plugin] 
+scm.commentPrefix=[maven-release-plugin]
 exec.pomFileName=pom.xml
 pushChanges=true
 releaseStrategyId=default
@@ -8,7 +8,7 @@ project.dev.org.custom\:dependency-package=1.1-SNAPSHOT
 project.scm.org.custom\:dependency-package.connection=scm\:git\:git\://github.com/simsonmoses/dependency-package.git
 project.scm.org.custom\:dependency-package.tag=pre-release
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
-scm.tag=pre
+scm.tag=pre-release
 remoteTagging=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.org.custom\:dependency-package.url=https\://github.com/SimsonMoses/dependency-package
