--- a/release.properties
+++ b/release.properties
@@ -8,7 +8,7 @@ project.dev.org.custom\:dependency-package=1.1-SNAPSHOT
 project.scm.org.custom\:dependency-package.connection=scm\:git\:git\://github.com/simsonmoses/dependency-package.git
 project.scm.org.custom\:dependency-package.tag=pre-release
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
-scm.tag=pre-release
+scm.tag=pre
 remoteTagging=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.org.custom\:dependency-package.url=https\://github.com/SimsonMoses/dependency-package
