--- a/release.properties
+++ b/release.properties
@@ -4,11 +4,11 @@ scm.commentPrefix=[maven-release-plugin]
 exec.pomFileName=pom.xml
 pushChanges=true
 releaseStrategyId=default
-project.dev.org.custom\:dependency-package=1.1-SNAPSHOT
+project.dev.org.custom\:dependency-package=0.0.5
 project.scm.org.custom\:dependency-package.connection=scm\:git\:git\://github.com/simsonmoses/dependency-package.git
 project.scm.org.custom\:dependency-package.tag=pre-release
 projectVersionPolicyConfig=<projectVersionPolicyConfig>${projectVersionPolicyConfig}</projectVersionPolicyConfig>\n
-scm.tag=pre
+scm.tag=main
 remoteTagging=true
 scm.branchCommitComment=@{prefix} prepare branch @{releaseLabel}
 project.scm.org.custom\:dependency-package.url=https\://github.com/SimsonMoses/dependency-package
